# RAG-System

./: .env.example  .gitignore  README.md  check-status.sh  pyproject.toml  requirements.txt
backend/: config.py  dependencies.py  main.py  schemas.py
backend/routes/: __init__.py  documents.py  health.py  query.py
docs/: STREAMLIT_UI_GUIDE.md
docs/superpowers/plans/: 2026-04-19-phase1-mvp-implementation.md
docs/superpowers/specs/: 2026-04-19-chat-with-your-docs-design.md
frontend/: api_client.py  app.py
frontend/components/: __init__.py  chat.py  documents.py  upload.py
src/adapters/: demo.py
src/adapters/chunkers/: recursive.py
src/adapters/embeddings/: __init__.py  gemini.py
src/adapters/llm/: __init__.py  gemini.py
src/adapters/loaders/: __init__.py  doc_loader.py  docx_loader.py  pdf_loader.py  txt_loader.py
src/adapters/vectorstores/: __init__.py  chroma.py
src/core/: interfaces.py  prompts.py
src/rag/: __init__.py  pipeline.py
streamlit-front-end/: app.py
tests/: conftest.py  fakes.py
tests/api/: test_documents.py  test_health.py  test_query.py  test_summarize.py  test_upload.py
tests/fixtures/: sample.docx  sample.txt
tests/unit/: test_api_client.py  test_chroma_store.py  test_chunker.py  test_config.py  test_doc_loader.py  test_docx_loader.py  test_gemini_embedding.py  test_gemini_llm.py  test_interfaces.py  test_loader_factory.py  test_pdf_loader.py  test_pipeline_answer.py  test_pipeline_ingest.py  test_pipeline_summarize.py  test_txt_loader.py
