[project]
name = "chat-with-your-docs"
version = "0.1.0-mvp"
description = "RAG application — chat with your own documents"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
